applications/localai/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: localai-https
spec:
  parentRefs:
  - name: localai
  hostnames:
    - localai.internal.vw-ops.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: localai-local-ai
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: localai-redirect
spec:
  parentRefs:
  - name: localai
    sectionName: http
  hostnames:
  - localai.internal.vw-ops.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
